@@ -1,6 +1,5 @@
 package com.github.silent.samurai.speedy.interfaces;
 
-import javax.persistence.EntityManager;
 import javax.servlet.http.HttpServletRequest;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
@@ -11,14 +10,12 @@ public interface RequestContext {
 
     HttpServletRequest getRequest();
 
-    EntityManager getEntityManager();
-
     EntityMetadata getEntityMetadata();
 
     default String getRequestURI() throws UnsupportedEncodingException {
-        String requestURI = URLDecoder.decode(getRequest().getRequestURI(), StandardCharsets.UTF_8.name());
+        String requestURI = URLDecoder.decode(getRequest().getRequestURI(), StandardCharsets.UTF_8);
         if (getRequest().getQueryString() != null) {
-            requestURI += "?" + URLDecoder.decode(getRequest().getQueryString(), StandardCharsets.UTF_8.name());
+            requestURI += "?" + URLDecoder.decode(getRequest().getQueryString(), StandardCharsets.UTF_8);
         }
         return requestURI.replaceAll(SpeedyConstant.URI, "");
     }
